# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_ci.yml
gendiff/: __init__.py  cli.py
gendiff/formatters/: format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: gendiff.py  main.py  parsing.py
tests/: test_format.py  test_gendiff.py  test_parsing.py
tests/test_data/: results.py
